--- a/main.css
+++ b/main.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    width:100px;
     font-family: monospace;
 }
 
@@ -56,7 +55,8 @@ h1 {
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/bg.jpg);
-    height: 100vh;
+    height: auto;
+    max-width:100%;
     background-size: cover;
     background-position: center;
 }
