--- a/main.css
+++ b/main.css
@@ -55,8 +55,7 @@ h1 {
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/bg.jpg);
-    height: auto;
-    max-width:100%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
 }
